2011/09/29 (TS):
 - Makefile.am:    added rules to Makefile.am to build + clean PDF
 - lanIpBasic.tex: further work.
 - lanIpBasic.h, lanIpBasicSetup.h: added comment that ethernet addresses
                   are arrays of 6 octets
2011/09/29 (TS):
 - added lanIpBasic.tex
2011/07/21 (TS):
 - e1k_lldrv.c: BUGFIX - only first unit would be accepted because
   return values of pci_scan() (== unit) other than zero were rejected.
   Accept any that is not -1.
2011/07/21 (TS):
 - e1k_lldrv.c: register/unregister this driver with e1000 generic
   support (new feature of e1000_osdep).
2011/04/19 (TS):
 - lanIpBasic.c, lanIpBasic.h: added udpSockRefBuf().
2010/06/30 (TS):
 - lanIpBasic.c: Let udpSockDestroy() return ENXIO instead of EBADFD
   (not POSIX and gone in newlib-1.18/rtems-4.10) if the socket had no
   queue attached.
2010/06/16 (TS):
 - drvLan9118.c: BUGFIX -- ISR was installed and interrupts enabled BEFORE
   the daemon task executed. Thus it could happen that interrupts were lost
   (because the RTEMS event was posted to an invalid TID or to one that
   had not been started yet) leaving the daemon blocked and interrupts disabled.
2010/06/11 (TS):
 - drvGnrIpBasic.c: BUGFIX -- rtems_task_start() clears all RTEMS events.
   Therefore, IRQs happening between hw_start (which enables IRQs) and
   task_start are lost. To make sure no IRQs are lost we enable irqs
   from the driver task before entering its work loop.
2010/04/14 (TS):
 - Makefile.am, tsec_lldrv.c: Added support for mvme3100's tsec NIC
   (***UNTESTED*** [I don't have a transition module for testing with
   a secondary ethernet port]).

   NOTE: This requires rtems-4.10 with some new API features!

2010/03/17 (TS):
 - lanIpBasic.c: Fixed IGMP problems:
     o igmp_send_msg(): even if buffer allocation fails a valid
       MC address may still be found. Moved lookup outside of
       'if ( buf_p )' statement.
     o BUGFIX: igmp_timeo() dereferenced 'mca' pointer even if